# weekendProject-FastParser

./: .gitignore  CMakeLists.txt  README.md  output.csv
Day11/: Mainbenchmark.cpp
Day12/: MainAdvancedAlgorithms.cpp
Day13/: MainTransformationPipeline.cpp
data/: sample.csv
include/: parser.h  person.h
src/: main.cpp  parser.cpp  person.cpp
